--- a/style.css
+++ b/style.css
@@ -190,6 +190,12 @@ body {
     display: block;
 }
 
+.option-list .option.correct{
+    color:#155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
 .quiz-box footer{
     display: flex;
     height: 60px;
@@ -246,7 +252,7 @@ transition: all 0.3sec ease;
 }
 
 section .option-list .option:hover{
-    color: #004085;
+    color:#fff;
     background: #004085;
     border-color: #b8daff;  
 }
