--- a/style.css
+++ b/style.css
@@ -196,6 +196,13 @@ body {
     border-color: #c3e6cb;
 }
 
+.option-list .option.incorrect{
+    color:#931010;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+
 .quiz-box footer{
     display: flex;
     height: 60px;
